--- a/index.html
+++ b/index.html
@@ -4,13 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Giphy Party!</title>
+  <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
 </head>
 
 <body>
+  <div class="container">
+    <h1 class="text-center mt-4">Giphy Party!</h1>
+    <form id="form" class="form-inline d-flex justify-content-center">
+      <input type="text" id="search" placeholder="Enter a search term" >
+      <button id="submit" class="btn btn-secondary ml-2">Search Giphy!</button>
+      <button id="remove" class="btn btn-warning ml-2">Remove Images</button>
+    </form>
+  </div>
+  <div id="gif-div" class="mt-5">
+  </div>
 
-<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.js"></script>
-<script src="app.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
